feat: Add video preview and camera functionality
This commit introduces video preview capabilities and adds a camera button to the UI.

The application now requests camera permissions, displays a video feed, and includes a button to control the camera. This lays the groundwork for potential video-enhanced interactions with the voice agent.

Additionally, project configuration has been updated to use NodeNext module resolution and specify the package type as "module" for better ES module support. Environment variable handling for the API key has also been improved for clarity and robustness.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gemini-live-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend for Gemini Live Audio Chat",
   "main": "dist/server.js",
   "scripts": {
