--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/ws": "^8.5.10",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.2",
     "vite": "^5.0.0",
     "concurrently": "^8.2.2"
